refactor: jpql로 수정